--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="container">
             <h2>Get in Touch</h2>
             <div class="contact-info">
-                <p><a href="mailto:hello@ravenshawk.co.uk" class="email-link">hello@ravenshawk.co.uk</a></p>
+                <p><a href="mailto:ahmed@rhawkstudio.com" class="email-link">ahmed@rhawkstudio.com</a></p>
                 <div class="social-links">
                     <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
                 </div>
