--- a/index.html
+++ b/index.html
@@ -50,21 +50,118 @@
     <section id="ventures" class="section">
         <div class="container">
             <h2>Our Services</h2>
-            <div class="services-grid">
-                <div class="service-card">
+            <div class="pricing-grid">
+                <div class="pricing-card">
                     <div class="service-icon"><i class="fas fa-paint-brush"></i></div>
-                    <h3>Brand Design</h3>
-                    <p>Visual identity systems, logo design, brand guidelines</p>
+                    <h3>Brand Identity Design</h3>
+                    <div class="pricing-list">
+                        <div class="price-item">
+                            <span class="price-name">Starter Brand Kit</span>
+                            <span class="price-value">£200</span>
+                            <span class="price-details">Logo, colour palette, basic type pairing, quick guide</span>
+                        </div>
+                        <div class="price-item">
+                            <span class="price-name">Full Brand Identity</span>
+                            <span class="price-value">£500</span>
+                            <span class="price-details">Logo suite, typography system, colours, brand guidelines, mockups</span>
+                        </div>
+                        <div class="price-item">
+                            <span class="price-name">Rebrand Package</span>
+                            <span class="price-value">£650</span>
+                            <span class="price-details">Audit, refreshed logo, visuals, rollout plan</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-card">
+                <div class="pricing-card">
                     <div class="service-icon"><i class="fas fa-laptop-code"></i></div>
                     <h3>UI/UX Design</h3>
-                    <p>Interactive prototypes, user flows, interface design</p>
+                    <div class="pricing-list">
+                        <div class="price-item">
+                            <span class="price-name">Landing Page</span>
+                            <span class="price-value">£180</span>
+                            <span class="price-details">1 screen design</span>
+                        </div>
+                        <div class="price-item">
+                            <span class="price-name">Website UI</span>
+                            <span class="price-value">£500+</span>
+                            <span class="price-details">Up to 5 pages, add £75 per extra page</span>
+                        </div>
+                        <div class="price-item">
+                            <span class="price-name">App UI</span>
+                            <span class="price-value">£650+</span>
+                            <span class="price-details">Up to 6 screens, add £50 per extra screen</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="service-card">
+                <div class="pricing-card">
                     <div class="service-icon"><i class="fas fa-palette"></i></div>
-                    <h3>Art Direction</h3>
-                    <p>Campaign concepts, brand storytelling, visual strategy</p>
+                    <h3>Graphic Design</h3>
+                    <div class="pricing-list">
+                        <div class="price-item">
+                            <span class="price-name">Social Media Post</span>
+                            <span class="price-value">£30</span>
+                            <span class="price-details">Static post</span>
+                        </div>
+                        <div class="price-item">
+                            <span class="price-name">Carousel/Story Set</span>
+                            <span class="price-value">£70</span>
+                            <span class="price-details">Up to 5 slides</span>
+                        </div>
+                        <div class="price-item">
+                            <span class="price-name">Poster/Flyer</span>
+                            <span class="price-value">£60</span>
+                            <span class="price-details">Digital design</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="extras-section">
+                <h3>Extras & Add-Ons</h3>
+                <div class="extras-grid">
+                    <div class="extra-item">
+                        <i class="fas fa-clock"></i>
+                        <div class="extra-details">
+                            <span class="extra-name">Express Turnaround (48h)</span>
+                            <span class="extra-price">+25% surcharge</span>
+                        </div>
+                    </div>
+                    <div class="extra-item">
+                        <i class="fas fa-file"></i>
+                        <div class="extra-details">
+                            <span class="extra-name">Editable Source Files</span>
+                            <span class="extra-price">+£35</span>
+                        </div>
+                    </div>
+                    <div class="extra-item">
+                        <i class="fas fa-comments"></i>
+                        <div class="extra-details">
+                            <span class="extra-name">Design Consultation (1 hour)</span>
+                            <span class="extra-price">£45</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="retainers-section">
+                <h3>Retainers & Bundles</h3>
+                <div class="retainer-cards">
+                    <div class="retainer-card">
+                        <h4>Monthly Design Support</h4>
+                        <span class="retainer-price">£450/month</span>
+                        <ul class="retainer-features">
+                            <li>Up to 10 graphics</li>
+                            <li>Priority turnaround</li>
+                            <li>Monthly strategy call</li>
+                        </ul>
+                    </div>
+                    <div class="retainer-card">
+                        <h4>Brand + Website Bundle</h4>
+                        <span class="retainer-price">£950</span>
+                        <ul class="retainer-features">
+                            <li>Full brand identity</li>
+                            <li>5-page UI website design</li>
+                            <li>Complete visual system</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
@@ -88,7 +185,7 @@
         <div class="container">
             <h2>Get in Touch</h2>
             <div class="contact-info">
-                <p><a href="mailto:ahmed@rhawkstudio.com" class="email-link">ahmed@rhawkstudio.com</a></p>
+                <p><a href="mailto:hello@ravenshawk.co.uk" class="email-link">hello@ravenshawk.co.uk</a></p>
                 <div class="social-links">
                     <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
                 </div>
